--- a/mvp/pubspec.yaml
+++ b/mvp/pubspec.yaml
@@ -28,12 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.4.9
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   http: ^1.1.0
+  path_provider: ^2.1.3
   shared_preferences: ^2.2.3
-  
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
